# fuzzyhash-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
benches/: compare_strings1.rs  random_data1.rs
examples/: example1.rs  example2.rs
src/: blockhash.rs  compare.rs  constants.rs  error.rs  hasher.rs  lib.rs  roll.rs
tests/: compare1.rs  compare2.rs  compare_empty.rs  hash_file.rs  integration1.rs  more.rs  random_data1.rs
