[package]
name = "fuzzyhash"
version = "0.1.1"
authors = ["Russ Morris <rmorris@infocyte.com>"]
license = "MIT"
description = "Pure Rust fuzzy hash implementation"
homepage = "https://github.com/rustysec/fuzzyhash-rs"
repository = "https://github.com/rustysec/fuzzyhash-rs"
keywords = ["ssdeep", "fuzzy", "hash", "fuzzyhash"]

[dependencies]
