[package]
name = "fuzzyhash"
version = "0.2.0"
authors = ["Russ Morris <rustysec@gmail.com>"]
license = "MIT"
description = "Pure Rust fuzzy hash implementation"
homepage = "https://github.com/rustysec/fuzzyhash-rs"
repository = "https://github.com/rustysec/fuzzyhash-rs"
keywords = ["ssdeep", "fuzzy", "hash", "fuzzyhash"]
edition = "2018"
readme = "README.md"

[lib]

[dependencies]
